fix: center the headings in the `About Me` block on tablet screens and below

--- a/src/widgets/Sections/AboutMe/aboutMe.module.css
+++ b/src/widgets/Sections/AboutMe/aboutMe.module.css
@@ -46,6 +46,12 @@
 }
 
 @media screen and (width <= 991px) {
+	.flex {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
 	.wrapper {
 		padding: 0 20px;
 		grid-template: auto auto auto / 1fr;
